# nvidia-smi-exporter

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
