[package]
name = "nvidia-smi-exporter"
version = "0.1.0"
authors = ["Qing Lei <github@leiqing.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
clap = "2.33"
csv = "1.1"
lazy_static = "1.4"
log = "0.4"
tide = "0.16"
tide-compress = "0.9"
prometheus = { version = "0.12", features = ["process"] }
